add cookie warning extensions links

--- a/index_de.html
+++ b/index_de.html
@@ -1202,6 +1202,15 @@ Damit Sie Beispieldaten in der Datenbank importieren, fühlen Sie diese leichte 
     <p>Auf <a href="http://extensions.joomla.org/" target="_blank">extensions.joomla.org</a> können Sie mehr als sechtausend Module, Plugins und Komponente herunterladen, damit Ihre Joomla Website mehr verschiedene Funktionen  erhaltet. </p>
   </div>
 
+  <div id="joomla_cookies_warning">
+    <h4>Joomla! Cookies Nutzungswarnung </h4>
+    <p> Nach der Cookie-Richtlinie müssen Sie entsprechende Modulen auf Ihre Website hinzufügen, die benachrichtigen, sobald Cookies verwendet werden. Wir empfehlen folgendes:</p>
+    <ul class="list">
+      <li><a href="http://extensions.joomla.org/extensions/site-management/cookie-control/24689" target="_blank">Cookies Akzeptieren </a></li>
+      <li><a href="http://extensions.joomla.org/extensions/site-management/cookie-control/21043" target="_blank">EU-Cookie-Richtlinie</a></li>
+    </ul>
+  </div>
+
   <div id="additional_links">
     <h4>Zusätzliche Links</h4>
     <ul class="list">
