--- a/index_en.html
+++ b/index_en.html
@@ -1205,8 +1205,8 @@ on desktop and iOs or Android mobile devices. Compatible with all modern browser
   </div>
 
   <div id="joomla_cookies_warning">
-    <h4>Joomla! Cookie messages</h4>
-    <p>Following the Cookie Law conditions you can add sufficient modules to your website. Module will display a warning message about the cookies used on your website. You can use the following ones:</p>
+    <h4>Joomla! Cookies usage warning</h4>
+    <p>Following the Cookie Law conditions, you should add appropriate modules to your website that will display a warning message about the cookies used on your website. We can recommend the following ones:</p>
     <ul class="list">
       <li><a href="http://extensions.joomla.org/extensions/site-management/cookie-control/24689" target="_blank">Cookie Accept</a></li>
       <li><a href="http://extensions.joomla.org/extensions/site-management/cookie-control/21043" target="_blank">EU e-Privacy Directive</a></li>
