--- a/index_es.html
+++ b/index_es.html
@@ -1217,6 +1217,15 @@ Tenga en cuenta: si Usted ha terminado la sección "Complete Installation/Instal
     <p>En  <a href="http://extensions.joomla.org/" target="_blank">extensions.joomla.org</a> Usted puede descargar más de 6 miles de módulos, plugins y componentes para añadir varias características a su sitio web de Joomla.</p>
   </div>
 
+  <div id="joomla_cookies_warning">
+    <h4>Joomla! Uso de Cookies</h4>
+    <p>Según las Condiciones de Ley de Cookie, hay que agregar los módulos adecuados a su sitio web que mostrarán un mensaje de aviso sobre cookies utilizados en su sitio web. Recomendamos:</p>
+    <ul class="list">
+      <li><a href="http://extensions.joomla.org/extensions/site-management/cookie-control/24689" target="_blank">Cookie Accept</a></li>
+      <li><a href="http://extensions.joomla.org/extensions/site-management/cookie-control/21043" target="_blank">EU e-Privacy Directive</a></li>
+    </ul>
+  </div>
+
   <div id="additional_links">
     <h4>Enlaces Adicionales</h4>
     <ul class="list">
