--- a/index_fr.html
+++ b/index_fr.html
@@ -1207,6 +1207,15 @@
     <p>Sur <a href="http://extensions.joomla.org/" target="_blank">extensions.joomla.org</a>, vous pouvez télécharger plus de 6 000 modules, plugins, et composants pour ajouter diverses fonctionnalités à votre site web Joomla.</p>
   </div>
 
+  <div id="joomla_cookies_warning">
+    <h4>Joomla! Avertissement Utilisation des cookies</h4>
+    <p>Suivant les conditions de droit Cookie, vous devez ajouter des modules appropriés à votre site Web qui permettra d'afficher un message d'avertissement sur ​​les cookies utilisés sur votre site. Nous pouvons vous recommander les suivantes:</p>
+    <ul class="list">
+      <li><a href="http://extensions.joomla.org/extensions/site-management/cookie-control/24689" Cookie target="_blank">Accepter</a></li>
+      <li><a href="http://extensions.joomla.org/extensions/site-management/cookie-control/21043" target="_blank">UE sur la vie privée directive</a></li>
+    </ul>
+  </div>
+
   <div id="additional_links">
     <h4>Liens supplémentaires</h4>
     <ul class="list">
