--- a/index_it.html
+++ b/index_it.html
@@ -1206,6 +1206,15 @@
     <p>Su <a href="http://extensions.joomla.org/" target="_blank">extensions.joomla.org</a> potrete scaricare oltre 6 mila moduli, plugins e componentiper aggiungere varie caratteristiche al vostro sito web joomla</p>
   </div>
 
+  <div id="joomla_cookies_warning">
+    <h4>Joomla! Warning utilizzo cookie</h4>
+    <p>seguito delle condizioni Legge Cookie, si dovrebbe aggiungere moduli appropriati al tuo sito web che visualizzerà un messaggio di avviso circa i cookie utilizzati sul vostro sito. Possiamo consigliare i seguenti:</p>
+    <ul class="list">
+      <li><a href="http://extensions.joomla.org/extensions/site-management/cookie-control/24689" Cookie target="_blank">Cookie Accettare</a></li>
+      <li><a href="http://extensions.joomla.org/extensions/site-management/cookie-control/21043" target="_blank">UE e-Privacy direttiva</a></li>
+    </ul>
+  </div>
+
   <div id="additional_links">
     <h4>Collegamenti aggiuntivi</h4>
     <ul class="list">
