--- a/index_pl.html
+++ b/index_pl.html
@@ -1204,9 +1204,18 @@
   </div>
 
   <div id="joomla_extensions">
-    <h4>Joomla! Rozszerzenia</h4>
-    <p>At <a href="http://extensions.joomla.org/" target="_blank">extensions.joomla.org</a> można ściągnąć ponad 6 tysięcy modułów, pluginów i komponentów by dodać różne właściwości do strony Joomla</p>
+    <h4>Joomla! Extensions</h4>
+    <p>At <a href="http://extensions.joomla.org/" target="_blank">extensions.joomla.org</a> you can download more than 6 thousand  modules, plugins and components to add various features to your Joomla website.</p>
   </div>
+
+  <div id="joomla_cookies_warning">
+  <h4>Joomla! Wykorzystanie ciasteczek ostrzeżenie</h4>
+  <p>Po warunki Law Cookie, należy dodać odpowiednie moduły do swojej strony internetowej, która wyświetli komunikat z ostrzeżeniem na temat plików cookie używanych na swojej stronie. Polecamy następujące z nich:</p>
+  <ul class="list">
+    <li><a href="http://extensions.joomla.org/extensions/site-management/cookie-control/24689" target="_blank">Cookie Akceptuj</a></li>
+    <li><a href="http://extensions.joomla.org/extensions/site-management/cookie-control/21043" target="_blank">UE e-prywatności dyrektywy</a></li>
+  </ul>
+</div>
 
   <div id="additional_links">
     <h4>Dodatkowe linki</h4>
