--- a/index_pt_br.html
+++ b/index_pt_br.html
@@ -1223,6 +1223,15 @@
     <p>No <a href="http://extensions.joomla.org/" target="_blank">extensions.joomla.org</a> você pode baixar mais de 6 mil módulos, plug-ins e componentes para adicionar várias funções no seu site Joomla.</p>
   </div>
 
+  <div id="joomla_cookies_warning">
+    <h4>Joomla! Advertindo uso cookies</h4>
+    <p>Seguindo as condições da Lei Cookie, você deve adicionar módulos apropriados para o seu site que irá exibir uma mensagem de alerta sobre os cookies utilizados em seu site. Podemos recomendar os seguintes:</p>
+    <ul class="list">
+      <li><a href="http://extensions.joomla.org/extensions/site-management/cookie-control/24689" Biscoito target="_blank">Aceitar</a></li>
+      <li><a href="http://extensions.joomla.org/extensions/site-management/cookie-control/21043" target="_blank">UE e-Privacy directiva</a></li>
+    </ul>
+  </div>
+
   <div id="additional_links">
     <h4>Links Adicionais</h4>
     <ul class="list">
