--- a/index_tr.html
+++ b/index_tr.html
@@ -1208,6 +1208,15 @@
     <p><a href="http://extensions.joomla.org/" target="_blank">extensions.joomla.org</a> sitesini ziyaret ederek çeşitli özellikler için modüller, eklentiler ve 6 bin den fazla bileşeni indirebilirsiniz</p>
   </div>
 
+  <div id="joomla_cookies_warning">
+    <h4>Joomla! Cookies kullanımı uyarı</h4>
+    <p>Hukuk Çerez şartlar izlenerek, web sitenizde kullanılan çerezler hakkında bir uyarı mesajı görüntüler web sitenize uygun modülleri eklemek gerekir. Biz aşağıdaki olanları tavsiye ederim:</p>
+    <ul class="list">
+      <li> <a href="http://extensions.joomla.org/extensions/site-management/cookie-control/24689" target="_blank">çerez Kabul</a></li>
+      <li> <a href="http://extensions.joomla.org/extensions/site-management/cookie-control/21043" target="_blank">AB e-Gizlilik Yönergesi</a></li>
+    </ul>
+  </div>
+
   <div id="additional_links">
     <h4>Ek Linkler</h4>
     <ul class="list">
