--- a/index_ru.html
+++ b/index_ru.html
@@ -1205,6 +1205,15 @@ on desktop and iOs or Android mobile devices. Compatible with all modern browser
     <p>At <a href="http://extensions.joomla.org/" target="_blank">extensions.joomla.org</a> you can download more than 6 thousands of modules, plugins and components to add various features to your Joomla website</p>
   </div>
 
+  <div id="joomla_cookies_warning">
+    <h4>Joomla! Прeдупреждение об использовании cookies</h4>
+    <p>По закону ЕС о Cookies Вы должны добавить на Ваш сайт модуль, который будет отображать предупреждение о cookies, используемых на сайте. Мы рекомендуем следующие модули:</p>
+    <ul class="list">
+      <li><a href="http://extensions.joomla.org/extensions/site-management/cookie-control/24689" target="_blank">Cookie Accept</a></li>
+      <li><a href="http://extensions.joomla.org/extensions/site-management/cookie-control/21043" target="_blank">EU e-Privacy Directive</a></li>
+    </ul>
+  </div>
+
   <div id="additional_links">
     <h4>Additional Links</h4>
     <ul class="list">
