--- a/index_fr.html
+++ b/index_fr.html
@@ -9,7 +9,8 @@
   <link rel="stylesheet" href="css/style.css" media="screen">
   <link rel="stylesheet" href="css/flexslider.css"  media="screen">
   <link rel="stylesheet" href="css/prettify.css"  media="screen">
-  <link rel="stylesheet" href="css/prettyPhoto.css"  media="screen">
+  <link rel="stylesheet" href="css/prettyPhoto.css"  media="screen">  
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/3.2.1/css/font-awesome.min.css" media="all" rel="stylesheet"> 
   <script src="js/jquery.js"></script>
   <script src="js/jquery.scrollTo.js"></script>
   <script src="js/jquery-migrate-1.1.0.js"></script>
