documentation update to v2-4

--- a/index_de.html
+++ b/index_de.html
@@ -127,6 +127,7 @@
                           <li><a href="#articles_single">Articles Single</a></li>
                           <li><a href="#caroufredsel">CarouFredSel</a></li>
                           <li><a href="#komento">Komento</a></li>
+                          <li><a href="#kunena">Kunena</a></li>
                         </ul>
                       </dd>
                     </dl>
@@ -969,7 +970,7 @@ Damit Sie Beispieldaten in der Datenbank importieren, fühlen Sie diese leichte 
 
     <h4>Zusätzliche Optionen </h4>
 
-      <p><b>Number of columns</b> (Anzal von Spalten) – erlaubt Artikel in mehreren Spalten anzuzeigen. Dies kann man verwendet nun  mit ‘horizontale’ und  ‘bootstrapCols’ alternative Layouts.</p>
+      <p><b>Number of columns</b> (Anzal von Spalten) – erlaubt Artikel in mehreren Spalten anzuzeigen.</p>
       <p><b>Custom Link</b> (benutzerdefinierter Link)- erlaubt Ihnen einen benutzerdefinierter Link unten dem Modul-Inhalt anzuzeigen. Er kann mit der externen URl oder mit einigem Joomla Menü-Punkt verknüpfen werden. </p>  
         <div class="img-container"><figure class="img-polaroid"><img src="img/newsflash-adv-1.png" alt=""></figure>
                 <p class="muted text-center">Bild 12. Custom Link</p></div>
@@ -979,14 +980,6 @@ Damit Sie Beispieldaten in der Datenbank importieren, fühlen Sie diese leichte 
       <p><b>Created by</b> (Erstellt von) – zeigt den Autor des Artikels an</p>
       <p><b>Show intro images </b> (Intro Bilder anzeigen)- erlaubt das Intro Bild anzuzeigen.</p>
       <p><b>Intro image align</b> (Ausrichtung des Intro Bildes)- erlaubt Intro Bilder auszurichten</p>
-      <p><b>Bootstrap Layout</b> -definiert welches Module Layout („fixiertes“ oder „zirkulierendes (=flüssiges)“) verwendet werden soll. Diese Funktion kann nun mit dem alternativen ‘bootstrapCols’ Layout verwendet. </p>
-
-   <h4> Alternative Layouts</h4>
-
-  <p><b>Horizontal</b>  (horizontale)-erlaubt Artikel in mehrere Spalte anzuzeigen.  Style von Elementen wird aus der style.css Moduldatei vorgenommen. Jede Artikel Breite hängt vom Wert des ‘number of columns’  (Anzahl von Spalten) Parameters ab und wird in Prozenten wie Division von 100 durch die Spaltenanzahl gezählt. </p> 
-
-  <p><b>BootstrapCols</b> - erlaubt Artikle in mehreren Spalten und Zeilen anzuzeigen. Es ist basiert auf den Bootstrap Raster. Man kann dies mit fixiertem und zirkuliertem Layout verwenden 
- (Artikelbreite wird in Pixeln oder Prozenten festgelegt). </p>
   </div>
 
 
@@ -1016,10 +1009,6 @@ Damit Sie Beispieldaten in der Datenbank importieren, fühlen Sie diese leichte 
 
     <div class="img-container"><figure class="img-polaroid"><img src="img/articles-single-1.jpg" alt="" ></figure>
         <p class="muted text-center">Bild 15. Modul “Articles Single”</p></div>
-
-    <p> Einen Artikel kann via seinen ID ausgewählt werden.  In Einstellungen des Moduls geben Sie die ID vom Artikel im Feld "Article ID" an. </p>
-
-    <p><i> Die Artikel-ID findet man im Joomla Admin Bereich in Komponent>  Artikelverwaltung (Component > Articles manager). ID ist die Nummer in der rechte Spalte.</i></p>
 
     <div class="img-container"><figure class="img-polaroid"><img src="img/articles-single-2.jpg" alt="" ></figure>
         <p class="muted text-center">Bild 16. Einstellungen vom “Articles Single” </p></div>
@@ -1070,6 +1059,22 @@ Damit Sie Beispieldaten in der Datenbank importieren, fühlen Sie diese leichte 
     <p>Die Konfigurationseinstellungen rufen Sie in  <b>Components / Kommentare> Komento > Integrations</b> mit dem Druck auf <b>Articles/Artikel</b> an. </p>
 
     <p>Mit Hilfe von Konfigurationseinstellungen können Sie Kommentare für bestimmte Kategorien aktivieren, Captcha und Nutzerprofils hinzufügen usw. Mehr können Sie <a href="http://stackideas.com/docs/komento.html" target="_blank">in der offizielle Website</a> erfahren</p>
+  </div>
+
+  <div id="kunena">
+    <h3>Kunena Forum</h3>
+
+    <p>Kunena is a forum component for Joomla. It allows you to create a forum based on the Joomla CMS.</p>
+
+    <div class="img-container"><figure class="img-polaroid"><img src="img/forum-1.jpg" alt=""></figure>
+        <p class="muted text-center">Img 21. Kunena forum</p></div>
+
+    <p>Kunena component can be accessed through the Joomla administration panel in the <b>Components > Kunena</b> section.</p>
+
+    <div class="img-container"><figure class="img-polaroid"><img src="img/forum-2.jpg" alt=""></figure>
+        <p class="muted text-center">Img 22. Kunena component section</p></div>
+
+    <p>You can learn more about Kunena on the <a href="http://www.kunena.org/docs/Main_Page" target="_blank">official website.</a></p>
   </div>
 
 </section>
