--- a/index_it.html
+++ b/index_it.html
@@ -127,6 +127,7 @@
                           <li><a href="#articles_single">Singoli articoli</a></li>
                           <li><a href="#caroufredsel">CarouFredSel</a></li>
                           <li><a href="#komento">Komento</a></li>
+                          <li><a href="#kunena">Kunena</a></li>
                         </ul>
                       </dd>
                     </dl>
@@ -974,7 +975,7 @@
 
     <h4>Opzioni Aggiuntive</h4>
 
-      <p><b>Number of columns (Numero di colonne)</b> - consente la visualizzazione di un articolo su più colonne. Può essere utilizzato solamente insieme ai layout alternativi ‘horizontal’ e ‘bootstrapCols’.</p>
+      <p><b>Number of columns (Numero di colonne)</b> - consente la visualizzazione di un articolo su più colonne.</p>
       <p><b>Custom Link (Link Personalizzabile)</b> - visualizza il link da personalizzare sotto il contenuto del modulo. Può essere collegato all’URL esterno o ad un elemento del menù Joomla.</p>  
         <div class="img-container"><figure class="img-polaroid"><img src="img/newsflash-adv-1.png" alt=""></figure>
                 <p class="muted text-center">Img 12. Personalizzazione del Link</p></div>
@@ -984,13 +985,6 @@
       <p><b>Created by (Creatoda)</b> - mostra l’autore dell’articolo</p>
       <p><b>Show intro images (Mostra Anteprima Immagini)</b> - Mostra immagine anteprima dell’articolo.</p>
       <p><b>IntroImages align (Allinea Immagini Anteprima)</b> - Allinea le immagini in anteprima.</p>
-      <p><b>Layout Bootstrap</b> - definisce il layout da utilizzare–statico o fluido. Può essere utilizzato solamente con il layout alternativo ‘bootstrapCols’.</p>
-
-   <h4> Layout Alternativi</h4>
-
-  <p><b>Horizontal</b> - consente la visualizzazione dell’articolo in colonnemultiple. Gli stili degli elementi sono presi dal file del modulo style.css. L’ampiezza di ogni elemento dipende dal valore del parametro relativo al ‘numero di colonne’ ed è calcolato in percentualetrattandosi di una divisione del numero di colonne per 100. </p> 
-
-  <p><b>BootstrapCols</b> - visualizza gli articoli in colonne e righe multiple. Basato sulla griglia bootstrap.Può essere utilizzato con layout sia statici che fluidi (L’ampiezza degli articoliè misurata in pixel o percentuale).</p>
   </div>
 
 
@@ -1020,10 +1014,6 @@
 
     <div class="img-container"><figure class="img-polaroid"><img src="img/articles-single-1.jpg" alt="" ></figure>
         <p class="muted text-center">Img 15. Modulo Articles Single</p></div>
-
-    <p>L’articolo può essere selezionato utilizzando il suo ID. Inserire l’ ID dell’articolonel campo " ID Articolo" all’interno delle impostazioni del modulo.</p>
-
-    <p><i>L’ID dell’Articolosi trova nel pannello di amministrazione Joomla nella sezione Componenti>Gestione Articoli(Component > Articles manager). L’ID è il numero nella Colonna di destra.</i></p>
 
     <div class="img-container"><figure class="img-polaroid"><img src="img/articles-single-2.jpg" alt="" ></figure>
         <p class="muted text-center">Img 16. Impostazioni Singolo Articolo</p></div>
@@ -1074,6 +1064,22 @@
     <p>Per accedere alle impostazioni di configurazione andare su <b>Componenti> Komento > Integrazioni (Components > Komento > Integrations)</b> e cliccare su <b>Articoli (Components > Komento > Integrations > Articles)</b></p>
 
     <p>Utilizzando le impostazioni componentepotrete abilitare i commenti per categorie specifiche, aggiungere captcha, profili utenti, articoli Joomla e tanto altro. Per saperne di più su Komento visita il <a href="http://stackideas.com/docs/komento.html" target="_blank">sito ufficiale</a>.</p>
+  </div>
+
+  <div id="kunena">
+    <h3>Kunena Forum</h3>
+
+    <p>Kunena is a forum component for Joomla. It allows you to create a forum based on the Joomla CMS.</p>
+
+    <div class="img-container"><figure class="img-polaroid"><img src="img/forum-1.jpg" alt=""></figure>
+        <p class="muted text-center">Img 21. Kunena forum</p></div>
+
+    <p>Kunena component can be accessed through the Joomla administration panel in the <b>Components > Kunena</b> section.</p>
+
+    <div class="img-container"><figure class="img-polaroid"><img src="img/forum-2.jpg" alt=""></figure>
+        <p class="muted text-center">Img 22. Kunena component section</p></div>
+
+    <p>You can learn more about Kunena on the <a href="http://www.kunena.org/docs/Main_Page" target="_blank">official website.</a></p>
   </div>
 
 </section>
