--- a/index_pt_br.html
+++ b/index_pt_br.html
@@ -127,6 +127,7 @@
                           <li><a href="#articles_single">Artigos Únicos</a></li>
                           <li><a href="#caroufredsel">CarouFredSel</a></li>
                           <li><a href="#komento">Komento</a></li>
+                          <li><a href="#kunena">Kunena</a></li>
                         </ul>
                       </dd>
                     </dl>
@@ -989,7 +990,7 @@
 
     <h4>Opções Adicionais</h4>
 
-      <p><b>Número de colunas</b> - permite mostrar artigos em várias colunas. Ele pode ser utilizado somente com layouts alternativos 'bootstrapCols' e 'horizontal'.</p>
+      <p><b>Número de colunas</b> - permite mostrar artigos em várias colunas.</p>
       <p><b>Link Padrão</b> - lhe permite mostrar link padrão abaixo do conteúdo do módulo. Ele pode ser ligado a uma URL externa ou a algum item do menu do Joomla.   </p>  
         <div class="img-container"><figure class="img-polaroid"><img src="img/newsflash-adv-1.png" alt=""></figure>
                 <p class="muted text-center">Img 12. Link Padrão</p></div>
@@ -999,13 +1000,6 @@
       <p><b>Criado por</b> - mostra autor do artigo</p>
       <p><b>Mostra imagens de introdução</b> - permite mostrar imagem de introdução do artigo.</p>
       <p><b>Alinhamento da imagem de introdução</b> - permite alinhar as imagens de introdução</p>
-      <p><b>Layout Bootstrap (Inicialização)</b>- define que layout do módulo usar - fixo ou fluído. Pode ser usado somente com o layout de alternativa 'bootstrapCols'.</p>
-
-   <h4> Layouts Alternativos</h4>
-
-  <p><b>Horizontal</b> - permite mostrar artigos em múltiplas colunas. Os estilos do item são tirados do arquivo do módulo style.css. A largura de cada item depende do valor do parâmetro do 'número de colunas' e é contado em porcentos como uma divisão de 100 por cada número de colunas. </p> 
-
-  <p><b>BootstrapCols</b> - permite mostrar artigos em múltiplas colunas e linhas. Baseado em grade de inicialização (em Inglês, &quot;bootstrap&quot;). Pode ser utilizado com layout fixo e fluído (a largura dos artigos é definida em pixels ou porcentos). </p>
   </div>
 
 
@@ -1035,10 +1029,6 @@
 
     <div class="img-container"><figure class="img-polaroid"><img src="img/articles-single-1.jpg" alt="" ></figure>
         <p class="muted text-center">Img 15. Módulo Articles Single</p></div>
-
-    <p>O artigo pode ser selecionado usando seu ID. Coloque o ID do artigo no campo &quot;ID do Artigo&quot; (em Inglês, &quot;Article ID&quot;) nas configurações do módulo.</p>
-
-    <p><i>O ID do Artigo pode ser encontrado no painel de administração do Joomla em Componente &gt; Seção de administração de artigo (em Inglês, &quot;Component > Articles manager section&quot;). O ID é o número na coluna da direita.</i></p>
 
     <div class="img-container"><figure class="img-polaroid"><img src="img/articles-single-2.jpg" alt="" ></figure>
         <p class="muted text-center">Img 16. Configurações do &quot;Articles Single&quot;</p></div>
@@ -1089,6 +1079,22 @@
     <p>Para acessar as configurações, vá para  <b>Componentes > Komento > Integrações (em Inglês, &quot;Components &gt; Komento &gt; Integrations&quot;)</b> e clique em Artigos (em Inglês, &quot;<b>Articles&quot;)</b></p>
 
     <p>Ao usar configurações do componente você pode habilitar comentários para categorias específicas, adicionar captcha, usar perfis assim como nos artigos do Joomla, etc. Você pode saber mais sobre o Komento no <a href="http://stackideas.com/docs/komento.html" target="_blank">site oficial</a></p>
+  </div>
+
+  <div id="kunena">
+    <h3>Kunena Forum</h3>
+
+    <p>Kunena is a forum component for Joomla. It allows you to create a forum based on the Joomla CMS.</p>
+
+    <div class="img-container"><figure class="img-polaroid"><img src="img/forum-1.jpg" alt=""></figure>
+        <p class="muted text-center">Img 21. Kunena forum</p></div>
+
+    <p>Kunena component can be accessed through the Joomla administration panel in the <b>Components > Kunena</b> section.</p>
+
+    <div class="img-container"><figure class="img-polaroid"><img src="img/forum-2.jpg" alt=""></figure>
+        <p class="muted text-center">Img 22. Kunena component section</p></div>
+
+    <p>You can learn more about Kunena on the <a href="http://www.kunena.org/docs/Main_Page" target="_blank">official website.</a></p>
   </div>
 
 </section>
