--- a/index_fr.html
+++ b/index_fr.html
@@ -95,15 +95,15 @@
                   </li>           
                   <li class="nav-item item3">
                     <dl class="slide-down">
-                       <dt><a href="#getting_started" class="icon-play">Démarrage</a> <i class="icon-sample"></i></dt>
-                         <dd>
-                           <ul class="list">          
-                            <li><a href="#complete_install">Installation complète Installation</a></li>
-                            <li><a href="#template-installation">Installation de modèles</a></li>
-                            <li><a href="#sample-data-installation">Installation de données de test</a></li>
-							<li><a href="#modules-installation">Installation de modules</a></li>
-                           </ul> 
-                       </dd>
+                      <dt><a href="#getting_started" class="icon-play">Démarrage</a> <i class="icon-sample"></i></dt>
+                      <dd>
+                        <ul class="list">          
+                          <li><a href="#complete_install">Installation complète Installation</a></li>
+                          <li><a href="#template-installation">Installation de modèles</a></li>
+                          <li><a href="#sample-data-installation">Installation de données de test</a></li>
+						              <li><a href="#modules-installation">Installation de modules</a></li>
+                        </ul> 
+                      </dd>
                      </dl> 
                   </li> 
                   <li class="nav-item item4">
@@ -127,6 +127,7 @@
                           <li><a href="#articles_single">Articles Single</a></li>
                           <li><a href="#caroufredsel">CarouFredSel</a></li>
                           <li><a href="#komento">Komento</a></li>
+                          <li><a href="#kunena">Kunena</a></li>
                         </ul>
                       </dd>
                     </dl>
@@ -975,7 +976,7 @@
 
     <h4>Options supplémentaires</h4>
 
-      <p><b>Number of columns (nombre de colonnes)</b> - permet d'afficher les articles dans plusieurs colonnes. Ne peut être utilisé qu'avec les agencements alternatifs « horizontal » et « bootstrapcols. »</p>
+      <p><b>Number of columns (nombre de colonnes)</b> - permet d'afficher les articles dans plusieurs colonnes.</p>
       <p><b>Custom Link (lien personnalisé)</b> - vous permet d'afficher un lien personnalisé en-dessous du contenu du module. Cela peut être un lien externe ou un élément de menu Joomla.</p>  
         <div class="img-container"><figure class="img-polaroid"><img src="img/newsflash-adv-1.png" alt=""></figure>
                 <p class="muted text-center">Img 12. Custom Link</p></div>
@@ -985,13 +986,6 @@
       <p><b>Created by (créé par)</b> - afficher l'auteur des articles.</p>
       <p><b>Show intro image (montrer l'image d'intro)</b>s - permet d'afficher l'image d'introduction des articles.</p>
       <p><b>Intro image align (alignement des images d'intro)</b> - permet d'aligner les images d'introduction.</p>
-      <p><b>Bootstrap Layout</b> - définit l'agencement de modules à utiliser : fixe ou fluide. Ne peut être utilisé qu'avec l'agencement alternatif « bootstrapCols. »</p>
-
-   <h4> Alternative Layouts (agencements alternatifs)</h4>
-
-  <p><b>Horizontal</b> - permet d'afficher les articles en plusieurs colonnes. Les styles des éléments sont tirés du fichier « style.css » du module. La largeur de chaque élément dépend de la valeur du paramètre « nombre de colonnes » (« number of columns ») et se compte en pourcentage, 100 divisé par le nombre de colonnes. </p> 
-
-  <p><b>BootstrapCols</b> - permet d'afficher les articles en plusieurs colonnes et rangées. Basé sur la grille bootstrap. Peut être utilisé avec un agencement fluide ou fixe (la largeur des articles est définie en pixels ou en pourcentages). </p>
   </div>
 
 
@@ -1021,10 +1015,6 @@
 
     <div class="img-container"><figure class="img-polaroid"><img src="img/articles-single-1.jpg" alt="" ></figure>
         <p class="muted text-center">Img 15. Module « Articles Single »</p></div>
-
-    <p>L'article peut être sélectionné en utilisant son ID. Entrez l'ID de l'article dans le champ « ID de l'article » (« Article ID ») dans les réglages du module.</p>
-
-    <p><i>Vous trouverez l'ID d'un article dans le panneau d'administration de Joomla, dans la section « Composant > Gestionnaire d'articles » (« Component > Articles manager »). l'ID est le nombre dans la colonne de droite.</i></p>
 
     <div class="img-container"><figure class="img-polaroid"><img src="img/articles-single-2.jpg" alt="" ></figure>
         <p class="muted text-center">Img 16. Réglages d'Articles Single</p></div>
@@ -1075,6 +1065,22 @@
     <p>Pour accéder à la configuration des réglages, allez dans « <b>Composants > Komento > Intégrations</b> » (« <b>Components > Komento > Integrations</b> ») et cliquez sur « <b>Articles</b>. »</p>
 
     <p>En utilisant les réglages des composants, vous pouvez activer les commentaires pour des catégories spécifiques, ajouter captcha, des profils d'utilisateurs, ainsi qu'aux articles Joomla, etc. Vous pouvez en apprendre plus à propos de Komento sur le <a href="http://stackideas.com/docs/komento.html" target="_blank">site officiel</a>.</p>
+  </div>
+
+  <div id="kunena">
+    <h3>Kunena Forum</h3>
+
+    <p>Kunena is a forum component for Joomla. It allows you to create a forum based on the Joomla CMS.</p>
+
+    <div class="img-container"><figure class="img-polaroid"><img src="img/forum-1.jpg" alt=""></figure>
+        <p class="muted text-center">Img 21. Kunena forum</p></div>
+
+    <p>Kunena component can be accessed through the Joomla administration panel in the <b>Components > Kunena</b> section.</p>
+
+    <div class="img-container"><figure class="img-polaroid"><img src="img/forum-2.jpg" alt=""></figure>
+        <p class="muted text-center">Img 22. Kunena component section</p></div>
+
+    <p>You can learn more about Kunena on the <a href="http://www.kunena.org/docs/Main_Page" target="_blank">official website.</a></p>
   </div>
 
 </section>
